# tdp1375

./: .gitignore  README.md  pom.xml
native/: br_unb_cic_tdp_base_GPUSorter.h
src/main/java/: Larger.java
src/main/java/br/unb/cic/tdp/: AbstractSbtAlgorithm.java  Application.java  BaseAlgorithm.java  BondSorting.java  CommonOperations.java  Configuration.java  EliasAndHartman.java  LargePermutations.java  Silvaetal.java  Test.java  Teste.java  Util.java
src/main/java/br/unb/cic/tdp/base/: ColorPool.java  CommonOperations.java  Configuration.java  GPUSorter.java  GPUSortingSearch.java  OrientedConfiguration.java  Simplification.java  (+3 more)
src/main/java/br/unb/cic/tdp1375/: EliasHartman1375.java  Sorting1375.java
src/main/resources/: application.properties  draw-config.js  explain.html  index.html  large100.txt  large20.txt  large30.txt  large40.txt  large50.txt  large60.txt  large70.txt  large80.txt  large90.txt  log4j.properties
src/main/resources/cases/: cases-3,2.txt  cases-comb.txt  cases-oriented-7cycle.txt
src/main/resources/datasets/: large100.txt  large110.txt  large120.txt  large130.txt  large140.txt  large150.txt  large160.txt  large170.txt  large180.txt  large190.txt  large20.txt  large200.txt  large210.txt  large220.txt  large230.txt  large240.txt  large250.txt  large260.txt  large270.txt  large280.txt  large290.txt  large30.txt  large300.txt  large310.txt  large320.txt  large330.txt  large340.txt  large350.txt  large360.txt  large370.txt  large380.txt  large390.txt  large40.txt  large400.txt  large410.txt  large420.txt  large430.txt  large440.txt  large450.txt  large460.txt  (+10 more)
src/main/resources/static/js/: draw-config.js
src/main/resources/stats/: short.txt  stats100.txt  stats110.txt  stats120.txt  stats130.txt  stats140.txt  stats150.txt  stats160.txt  stats170.txt  stats180.txt  stats190.txt  stats20.txt  stats200.txt  stats210.txt  stats220.txt  stats230.txt  stats240.txt  stats250.txt  stats260.txt  stats270.txt  stats280.txt  stats290.txt  stats30.txt  stats300.txt  stats310.txt  stats320.txt  stats330.txt  stats340.txt  stats350.txt  stats360.txt  stats370.txt  stats380.txt  stats390.txt  stats40.txt  stats400.txt  stats410.txt  stats420.txt  stats430.txt  stats440.txt  stats450.txt  (+10 more)
src/main/resources/templates/: case.html  combinations.html  equivalent.html  extensions.html  index.html  sorting.html
src/native/: CMakeLists.txt
src/native/backtracking/: pi_filter.cu  pi_filter.cuh  slot_manager.cu  slot_manager.cuh  sorting_search.cu  sorting_search.cuh  transposition.cuh
src/native/core/: common.cuh  cuda_error.cuh  cuda_memory.cuh  cuda_memory_pressure.cuh  cuda_memory_tracker.cuh  cuda_stream.cuh
src/native/jni/: jni_sorter.cu
src/native/test/: main.cu
src/test/java/br/unb/cic/tdp/: CommonOperationsTest.java  ConfigurationTest.java  EliasAndHartmanTest.java  SilvaetalTest.java
(+106 files in other folders)
